correction in progress

--- a/nalkunudi.tex
+++ b/nalkunudi.tex
@@ -17,6 +17,5 @@ paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx shirxVgaLavaru dhamaR,
 \vskip 1.5cm
 
 \noindent
-di : 28-12-2019\hfill {\bf -si}\hspace{1.7cm}\,\\
-\phantom{aa}\hfill (sidedhxVshavxra sAvxmigaLu)\quad\,\\
+di : 28-12-2019\hfill sidedhxVshavxra sAvxmigaLu\qquad\,\\
 \phantom{a} \hfill jAcnxnayoVgAsharxma, vijayapura
