--- a/nivedane.tex
+++ b/nivedane.tex
@@ -83,11 +83,10 @@ idelalx Agi modala haMtada akaSxrajoVDaNeya kAyaR pArxraMBavAyitu parxyoVgaBAgad
 
 \medskip
 
-I kAyaRdalilx namamx neravige baMdadudx ``vacana saMcaya DATfkAM'' I Ayxpf namamx upayoVgakekx baMditu. I Ayxpf anunx DA. O.elf. nAgaBUSaNa\-sAvxmi, shirxV vasudheVMdarx, shirxV ecf.elf. OMshivaparxkAshf, shirxV ke. deVvarAju, shirxVmati ecf. pavitarx.  ivarugaLu sidadhxmADidadx I Ayxpf namamx upayoVgakekx baMditu. \hbox{aMtajARlada} neravanunx paDeyalAyitu. adara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya shirxV ji. gULapapxsAvxmi, shirxV Arf.esf. honanxsheTiTx, shirxV pi.esf. kumArf,  shirxV maMjunAtha, shirxV pi. parxBusAvxmi, DA. pi.esf. sudiVpf, shirxV enf.eM. kaqSaNxpapx, shirxV ecf.emf. nAgaBUSaNa, shirxV emf.esf. naTarAjf, shirxV pi. gurupAdasAvxmi, shirxV ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU shirxV eM.esf. maMjunAthf, shirxV sidadhxrAju, shirxV ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. saMsakxqqtada BAgagaLanunx vidAvxnf DA. ecf.vi. nAgarAjarAvfravaru pariSakxrisi koTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
+I kAyaRdalilx namamx neravige baMdadudx ``vacana saMcaya DATfkAM'' eMba  Ayxpf namamx upayoVgakekx baMditu. I Ayxpf anunx DA. O.elf. nAgaBUSaNa\-sAvxmi, shirxV vasudheVMdarx, shirxV ecf.elf. OMshivaparxkAshf, shirxV ke. deVvarAju, shirxVmati ecf. pavitarx.  ivaru\-gaLu rUpisidAdxre.  idara sahAyadiMda I savAlanunx dATalu nidhaRrisalAyitu. I kAyaRkAkxgi jeesfesf saMsethxya shirxV ji. gULapapxsAvxmi, shirxV Arf.esf. honanxsheTiTx, shirxV pi.esf. kumArf,  shirxV maMjunAtha, shirxV pi. parxBusAvxmi, DA. pi.esf. sudiVpf, shirxV enf.eM. kaqSaNxpapx, shirxV ecf.emf. nAgaBUSaNa, shirxV emf.esf. naTarAjf, shirxV pi. gurupAdasAvxmi, shirxV ecf.pi. shirxVdhara muMtAda kananxDa adhAyxpakaru hAgU shirxV eM.esf. maMjunAthf, shirxV sidadhxrAju, shirxV ruderxVshf hAgU itare gaNakayaMtarx sahAyakara neravanunx paDeyalAyitu. I kAyaR mugidu matotxmemx akaSxra joVDaNe kAyaR naDedu \textbf{shivapada ratanxkoVsha}da karaDu sidadhxgoMDitu. idakAkxgi matetx kelavu tiMgaLugaLa samaya hiDiyitu. saMsakxqqtada BAgagaLanunx vidAvxnf DA. ecf.vi. nAgarAjarAvfravaru pariSakxrisi koTaTxru. hiVge halavu haMtagaLanunx dATi konege saBAparxti sidadhxvAyitu.
 
 \medskip
 
-%raghu, page 13
 I naDuve samitiya sadasayxrAgidadx shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara, porx. esf, naMjuMDayayxnavaru vidhivasharAdaru. avara anupa\-sithxti elalx saBegaLalUlx bahaLavAgi kADitu. aMtimavAgi porx. ji.esf. sidadxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, vidAvxnf DA. ecf.vi. nAgarAjarAvf, DA. enf.esf. tArAnAtha, DA. si. shivakumArasAvxmi, shirxV. Arf.esf. pUNARnaMda, DA. naMdiVshf haMce ivavaru\-gaLanunx oLagoMDa saMpAdaka samitiyu 40kUkx hecucx saBegaLanunx naDesi saBA\-parxtiyanunx parishiVlisi, muKayx ulelxVKagaLanunx athaR, niSapxtitxgaLanunx, athaRcACxye, ulelxVKagaLanunx kUlaMkaSavAgi gamanisi niGaMTu\-vige oMdu sapxSaTx rUpavanunx niVDitu. I saMdaBaRdalilx je{esf}{esf} mahA vidAyxpiVThada shirxV basavaNaNxnavaru hAgU meYsUru vishavxvidAyxnilayada parxsArAMgada nivaqtatx nwkararAda shirxVmati kamalamamxnavaru karaDu tidudxvalilx mADida sahAya bahu doDaDxdu.
 
 \medskip
@@ -247,35 +246,35 @@ padagaLa athaRvanunx vivarisuvAga modalu vAcAyxthaRvanunx athavA sAmAnayxvAda at
 \begin{center}
 {\large\bfseries 3}
 \end{center}
-\medskip
+\smallskip
 
-iMtahadoMdu mahatatxvXpUNaRvAda niGaMTu rUpagoLaLxlu kAraNiVBUtarAdavaru sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThada piVThAdhayxkaSxrAda paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru. asAdhayxvanunx sAdhayx\-vAgisuva avara mahAnf ceYtanayxkekx I garxMtha oMdu saNaNx udAharaNe aSeTx. jeesfesf saMsethxyu BwtikavAgi mAtarxvalalxde bwdidhxkavAgiyU shirxVmaMtavAgide enunxvudakekx I garxMtha oMdu sAkiSx. idara nimARNa, rUpugoLuLxvikeya hiMde pUjayxra saMkalapxshakitx kelasa mADide. avaru saMpAdaka samitige odagisikoTaTx swlaBayx, swkayaRgaLu atishayavAdavu. apAra sharxmavanunx beVDuva I kAyaR naDeyuvAga yAvudeV korate uMTAgadaMte paramapUjayxru noVDikoMDaru. saMsakxqqtipoVSakarAda shirxVgaLu I apUvaR kAyaRda mUlaka shirxVmaThada sAhitayx-saMsakxqqtiya aunanxtayxvanunx matatxSuTx hecicxsidAdxre. avarige saMpAdaka maMDaLiya paravAgi anaMta parxNAmagaLu.
+iMtahadoMdu mahatatxvXpUNaRvAda niGaMTu rUpagoLaLxlu kAraNiVBUtarAdavaru sutUtxru jagadugxru shirxV viVrasiMhAsana mahAsaMsAthxna maThada piVThAdhayxkaSxrAda paramapUjayx jagadugxru shirxV shivarAtirx deVshikeVMdarx mahAsAvxmigaLavaru. asAdhayxvanunx sAdhayx\-vAgisuva avara mahAnf ceYtanayxkekx I garxMtha oMdu saNaNx udAharaNe aSeTx. jeesfesf saMsethxyu BwtikavAgi mAtarxvalalxde bwdidhxka\-vAgiyU shirxVmaMtavAgide enunxvudakekx I garxMtha oMdu sAkiSx. idara nimARNa, rUpugoLuLxvikeya hiMde pUjayxra saMkalapxshakitx kelasa mADide. avaru saMpAdaka samitige odagisikoTaTx swlaBayx, swkayaRgaLu atishayavAdavu. apAra sharxmavanunx beVDuva I kAyaR naDeyuvAga yAvudeV korate uMTAgadaMte paramapUjayxru noVDikoMDaru. saMsakxqqtipoVSakarAda shirxVgaLu I apUvaR kAyaRda mUlaka shirxVmaThada sAhitayx-saMsakxqqtiya aunanxtayxvanunx matatxSuTx hecicxsidAdxre. avarige saMpAdaka maMDaLiya paravAgi anaMta parxNAmagaLu.
 
-\medskip
+\smallskip
 
 I garxMthakekx beVkAda dAshaRnikate, tAtitxvXka savxrUpavanunx niVDidavaru vijayapurada jAcnxnayoVgAsharxmada pUjayx\break shirxV sidedhxVshavxra mahAsAvxmigaLavaru. avara mAgaRdashaRnadalilx I pAriBASika koVsha paripUNaRteyanunx paDeyalu sAdhayxvAgide. avara sUcaneya meVrege padaniSapxtitx BAga I garxMthadalilx seVpaRDeyAyitu.  garxMthada karaDanunx aneVka bAri gamanisi, pAriBASika padagaLa aMtima Ayekxyalilx atuyxpa\-yukatxvAda salahe, sUcanegaLanunx niVDi avaru namamxnunx keYhiDidu munanxDesidAdxre. avarige haqtUpxvaRkavAda sharaNu sharaNAthiRgaLu.
 
-\medskip
+\smallskip
 
-I pAriBASika garxMtha racane sArataH oMdu vidavxtitxna kAyaR; atayxMta sharxmadAyakavAda kAyaR. idu atayxMta veYjAcnxnikavAgi, vidavxtUpxNaRvAgi racitavAgideyeMbudu namamx aBipArxya. I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf.\break sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta \hbox{viVrasheYva} pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi,\break kAyaRnivARhaka saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike I yoVjanege oMdu Ganateyanunx taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
+I pAriBASika garxMtha racane sArataH oMdu vidavxtitxna kAyaR; atayxMta sharxmadAyakavAda kAyaR. idu atayxMta veYjAcnxnikavAgi, vidavxtUpxNaRvAgi racitavAgideyeMbudu namamx aBipArxya. I rUpavanunx taLeyalu kAraNarAda vidAvxMsaru hAgU saMpAdaka maMDaLiya sadasayxrugaLAda porx. ji.esf. sidadhxliMgayayx, DA. Ti.vi. veMkaTAcala shAsitxrXV, DA. enf.esf. tArAnAtha, DA. ecf.vi. nAgarAjarAvf hAgU saMsakxqqta \hbox{viVrasheYva} pAri\-BASika padakoVshavanunx kananxDakekx anuvAdisikoTuTx I yoVjanege adhikaqta cAlane niVDida DA. si. shivakumArasAvxmi, kAyaRnivARhaka saMpAdakaroMdige niraMtaravAgi sahakarisutatx, parxti haMtadalUlx karaDu parxtiyanunx visheVSavAgi parishiVlisikoTaTx shirxV Arf.esf. pUNARnaMda ivarelalxra seVveyanunx kaqtajacnxteyiMda samxrisutetxVve. niGaMTuvina kAyaRdalilx I elalx mahaniVyara pAlogxLuLxvike I yoVjanege oMdu Ganateyanunx taMdu\-koTiTxde. ivarelalxrigU haqtUpxvaRka kaqtajacnxtegaLu.
 
-\medskip
+\smallskip
 
 I niGaMTuvina kAyaRdalilx namage AraMBadalilx neravAda hiriya vidAvxMsaru, niGaMTu tajacnxru Ada matutx Iga namomxMdi\-gilalxda shirxV imamxDi shivabasava sAvxmigaLu, shirxV ecf. gaMgAdharanf, shirxV enf. basavArAdhayx, DA. esf. vidAyxshaMkara hAgU porx. esf. naMjuMDayayxnavaru avaranUnx manaHpUvaRkavAgi samxrisutetxVve.
 
-\medskip
+\smallskip
 
 I garxMtha rUpagoLuLxvalilx sahakarisida parxkaTaNa viBAgada hiMdina nideVRshakashirxV ke.si. shivapapxnavarige, Igina nideVRshaka porx. morabada malilxkAjuRna, shirxV Ti.pi. parxBusAvxmiyavarige matutx sahAyaka shirxV nagaleR shivakumArfravarige kaqtajacnxtegaLu. I \hbox{yoVjaneyu} acucxkaTATxgi oDamUDalu kAraNarAdavaru shirxVraMga DijiTelf sAPfTxveVrf TekAnxlajisf perxYveVTf limiTeDf kaMpani\-yavaru; adara muKayxsathxrAda porx. si.esf. yoVgAnaMda, shirxV ajuRnf kashayxpf, shirxV Di. shivashaMkarfravara eDebiDada saha\-kArakekx dhanayxvAdagaLu. aneVka goMdalagaLanunx bageharisi nAvu niVDida aneVka toMdaregaLanunx sahisikoMDu, beVsaragoLaLxde 15kUkx hecucx bAri tidudxpaDigaLanunx aLavaDisi, I niGaMTuvina kAyaRvanunx tALemxyiMda mADikoTaTx shirxV eM.pi. rAGaveVMdarx parxsAdf matutx shirxVmati esf. parxtiBAravarigU tuMbu haqdayada kaqtajacnxtegaLu. garxMthakekx athaRpUNaRvAda muKapuTavanunx racisikoTaTx shirxV eM.esf. maMjunAthfravarige, shirxVmaThada kAyakabaMdhugaLige vaMdanegaLu. 
 
-\medskip
+\smallskip
 
 I garxMthavanunx acucxkaTATxgi mudirxsikoTaTx lakiSxmXV mudarxNAlaya, beMgaLUru matutx I garxMthakekx sahAyadhanavanunx niVDida kanARTaka sakARrada kananxDa matutx saMsakxqqti ilAKege visheVSa kaqtajacnxtegaLu.
 
-\medskip
+\smallskip
 
 I pAriBASika padakoVshavu viVrasheYva-liMgAyata dhAmiRka, sAmAjika, sAMsakxqqtika adhayxyana, adhAyxpana hAgU\break saMshoVdhanege bahaLa upayukatx\-vAgali eMbudu I niGaMTu racaneya hiMdina AshayavAgide. samagarxteya kaDege iTaTx daqDha hejejx idAdarU ideV paripUNaRveMba kalapxne namamxdalalx. paripUNaRteya daqSiTxyiMda I niGaMTige saMbaMdhisidaMte racanAtamxka salahe, sUcanegaLu baMdare avugaLanunx vinayapUvaRkavAgi sivxVkarisi, muMdina mudarxNadalilx aLavaDisikoLuLxtetxVve eMdu vinamarxvAgi tiLisaliciCxsutetxVve.
 
-\vskip .5cm
+\vskip .3cm
 
 \hfill {\bf DA. naMdiVshf haMce}\qquad\,
 
